--- a/main.css
+++ b/main.css
@@ -5,27 +5,31 @@ body{
 img{
   position: absolute;
   top:0;
+  cursor: pointer;
 }
 
 .border{
   position: absolute;
   top:56%;
-  left:0;
-  height: 40px;
-  width: 100%;
+  left:50%;
+  padding: 1rem;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  color:white;
   background-color: black;
   animation-duration: 3s;
   animation-name: opac;
   animation-direction: alternate;
   animation-iteration-count: infinite;
+  cursor: pointer;
 }
 
 @keyframes opac {
   from {
-    opacity: 0;
+    background-color: #000;
   }
 
   to {
-    opacity: 1;
+    background-color: #999;
   }
 }
